--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -8,9 +8,18 @@
     "cookies-policy": "Cookies Policy",
     "dismiss": "Dismiss",
     "search": "Search for activities",
-    "sign-in": "Sign in",
-    "sign-up": "Sign up",
-    "email": "E-mail"
+    "email": "E-mail",
+    "signin": "Sign in",
+    "signup": "Sign up",
+    "forgotpw": "Send instructions",
+    "privacy-policy": "Privacy Policy",
+    "terms-and-conditions": "Terms and Conditions",
+    "light": "Light",
+    "dark": "Dark",
+    "theme": "Theme",
+    "language": "Language",
+    "signout": "Sign Out",
+    "my-account": "My account"
   },
   "pages": {
     "home": {
@@ -22,17 +31,73 @@
     }
   },
   "dialog": {
-    "signin": {
-      "title": "Log in or create an account",
+    "auth": {
+      "content": {
+        "forgotpw-btn": "Go back to sign in",
+        "signin-btn": "Don't have an account? Sign up",
+        "signup-btn": "Already have an account? Sign in"
+      },
+      "cpassword-label": "Confirm password",
       "description": "Please choose a provider to sign in, or enter your email and password.",
-      "or-continue": "or continue with",
+      "email-label": "E-mail address",
       "email-placeholder": "Your e-mail address",
-      "email-label": "E-mail address"
+      "forgot-password": "Forgot your password?",
+      "or-continue": "or continue with",
+      "password-label": "Password",
+      "password-placeholder": "Your password",
+      "title": "Log in or create an account"
     }
   },
   "validations": {
     "email": {
-      "invalid": "Email address looks invalid"
+      "invalid": "E-mail address looks invalid"
+    },
+    "password": {
+      "min": "Must be at least 8 characters",
+      "mismatch": "Passwords do not match"
     }
+  },
+  "exceptions": {
+    "internal-server-error": "Internal server error",
+    "bad-request-error": "Bad request error",
+    "auth": {
+      "passwords-not-match": "Invalid password"
+    },
+    "users": {
+      "user-already-exists": "User already exists",
+      "user-not-found": "User not found",
+      "verifications": {
+        "invalid-token": "Invalid verification token",
+        "expired-token": "Verification token expired",
+        "validate_email": {
+          "already-verified": "Email is already verified",
+          "cooldown-not-lifted": "Limited to one verification email every 5 minutes"
+        },
+        "reset_password": {
+          "cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
+        }
+      }
+    },
+    "activity": {
+      "activity-not-found": "Activity not found",
+      "missing-required-parameter-error": "Missing required query param: projectId"
+    },
+    "program": {
+      "program-not-found": "Program not found"
+    },
+    "project": {
+      "project-not-found": "Project not found"
+    },
+    "subActivity": {
+      "subActivity-not-found": "Sub Activity not found",
+      "missing-required-parameter-error": "Missing required query param: activityId"
+    }
+  },
+  "footer": {
+    "about-us": "About us",
+    "open-source": "Open source",
+    "public-analytics": "Public analytics",
+    "legal": "Legal",
+    "reserved": "© 2022-PRESENT The Extensionly contributors. All rights reserved."
   }
 }
