--- a/src/lib/i18n/locales/pt-BR.json
+++ b/src/lib/i18n/locales/pt-BR.json
@@ -8,9 +8,18 @@
     "cookies-policy": "Política de Cookies",
     "dismiss": "Dispensar",
     "search": "Pesquisar atividades",
-    "sign-in": "Entrar",
-    "sign-up": "Cadastrar",
-    "email": "E-mail"
+    "email": "E-mail",
+    "signin": "Entrar",
+    "signup": "Cadastrar",
+    "forgotpw": "Enviar instruções",
+    "privacy-policy": "Política de Privacidade",
+    "terms-and-conditions": "Termos e Condições",
+    "light": "Claro",
+    "dark": "Escuro",
+    "theme": "Tema",
+    "language": "Idioma",
+    "signout": "Sair",
+    "my-account": "Minha conta"
   },
   "pages": {
     "home": {
@@ -22,17 +31,73 @@
     }
   },
   "dialog": {
-    "signin": {
-      "title": "Entre ou crie uma conta",
+    "auth": {
+      "content": {
+        "forgotpw-btn": "Voltar para fazer login",
+        "signin-btn": "Não tem uma conta? Cadastre-se",
+        "signup-btn": "Já tem uma conta? Entrar"
+      },
       "description": "Por favor, escolha um provedor para entrar ou digite seu e-mail e senha.",
-      "or-continue": "ou continue com",
+      "email-label": "Endereço de e-mail",
       "email-placeholder": "Seu endereço de e-mail",
-      "email-label": "Endereço de e-mail"
+      "forgot-password": "Esqueceu sua senha?",
+      "or-continue": "ou continue com",
+      "password-label": "Senha",
+      "password-placeholder": "Sua senha",
+      "title": "Entre ou crie uma conta"
     }
   },
   "validations": {
     "email": {
       "invalid": "O endereço de e-mail parece inválido"
+    },
+    "password": {
+      "min": "Deve ter pelo menos 8 caracteres",
+      "mismatch": "As senhas não conferem"
     }
+  },
+  "exceptions": {
+    "internal-server-error": "Erro interno do servidor",
+    "bad-request-error": "Erro de solicitação inválida",
+    "missing-required-parameter-error": "Parâmetro obrigatório faltando: {key}",
+    "auth": {
+      "passwords-not-match": "Senha inválida"
+    },
+    "users": {
+      "user-already-exists": "Usuário já existe",
+      "user-not-found": "Usuário não encontrado",
+      "verifications": {
+        "invalid-token": "Token de verificação inválido",
+        "expired-token": "Token de verificação expirado",
+        "validate_email": {
+          "already-verified": "Email já foi verificado",
+          "cooldown-not-lifted": "Limitado a um email de verificação a cada 5 minutos"
+        },
+        "reset_password": {
+          "cooldown-not-lifted": "Limitado a uma redefinição de senha a cada 5 minutos"
+        }
+      }
+    },
+    "activity": {
+      "activity-not-found": "Atividade não encontrada",
+      "missing-required-parameter-error": "Parâmetro obrigatório faltando: projectId"
+    },
+    "program": {
+      "program-not-found": "Programa não encontrado"
+    },
+    "project": {
+      "project-not-found": "Projeto não encontrado"
+    },
+    "subActivity": {
+      "subActivity-not-found": "Sub Atividade não encontrada",
+      "missing-required-parameter-error": "Parâmetro obrigatório faltando: activityId"
+    }
+  },
+  "footer": {
+    "about-us": "Sobre nós",
+    "open-source": "Código aberto",
+    "public-analytics": "Estatísticas públicas",
+    "legal": "Jurídico",
+    "reserved": "© 2022-PRESENTE Os contribuidores da Extensionly. Todos os direitos reservados."
   }
 }
