--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -1,168 +1,68 @@
 {
-	"terms": {
-		"cookies-policy": "Política de Cookies",
-		"dismiss": "Dispensar",
-		"search": "Pesquisar atividades",
-		"email": "E-mail",
-		"signin": "Entrar",
-		"signup": "Cadastrar",
-		"forgotpw": "Enviar instruções",
-		"privacy-policy": "Política de Privacidade",
-		"terms-and-conditions": "Termos e Condições",
-		"light": "Claro",
-		"dark": "Escuro",
-		"theme": "Tema",
-		"language": "Idioma",
-		"signout": "Sair",
-		"my-account": "Minha conta",
-		"system": "Sistema",
-		"winter": "Inverno",
-		"night": "Noite",
-		"please-wait": "Por favor, aguarde",
-		"with": "com",
-		"cookies-notice": {
-			"more-info": "Mais informações em",
-			"subtitle": "Usamos apenas cookies essenciais para oferecer nossos serviços.",
-			"title": "Declaração de Cookies"
-		},
-		"save": "Salvar"
-	},
-	"pages": {
-		"home": {
-			"title-1": "Ações de extensão",
-			"title-2": "na palma da sua mão",
-			"subtitle": "Se inscreva em eventos, palestras, workshops, projetos e programas de extensão ofertados pela sua universidade. Crie e submeta propostas de novas ações de extensão diretamente pela plataforma.",
-			"signup-now": "Crie sua conta agora!",
-			"browse-activities": "Descubra atividades"
-		},
-		"account": {
-			"avatar": {
-				"description": "Clique no avatar para enviar um novo de seus arquivos.",
-				"info": "Um avatar é opcional, mas altamente recomendado.",
-				"title": "Seu Avatar"
-			},
-			"delete": {
-				"description": "Exclua permanentemente sua conta pessoal e todo o seu conteúdo da plataforma Extensionly.",
-				"dialog": {
-					"confirm": "Excluir minha conta",
-					"description": "Por favor, confirme a exclusão digitando seu email.",
-					"title": "Confirme Exclusão da Conta",
-					"trigger": "Excluir"
-				},
-				"info": "Cuidado com suas ações! Isso não é reversível.",
-				"success": "Usuário excluído com sucesso.",
-				"title": "Excluir Conta Pessoal"
-			},
-			"email": {
-				"description": "Digite o endereço de e-mail que deseja usar para fazer login com a Extensionly.",
-				"info": "Enviaremos um e-mail para você para validar a alteração.",
-				"title": "Seu Email",
-				"email-verified": "Seu email foi validado!",
-				"failed-description": "Validação falhou. Tente novamente mais tarde.",
-				"not-yet-verified": "Seu email ainda não foi validado.",
-				"please-verify": "Por favor, valide clicando em",
-				"resend-email": "Validar",
-				"sent-success": "Email enviado com sucesso!",
-				"success": "Email validado com sucesso!",
-				"success-description": "Validado! Você pode fechar esta página agora."
-			},
-			"name": {
-				"description": "Por favor, digite seu nome completo.",
-				"title": "Seu Nome",
-				"success": "Nome atualizado! Por favor, entre novamente para ver a mudança."
-			}
-		}
-	},
-	"dialogs": {
-		"auth": {
-			"title": {
-				"signin": "Entre ou crie uma conta",
-				"signup": "Crie uma conta",
-				"forgotpw": "Recupere sua senha"
-			},
-			"description": {
-				"signin": "Por favor, escolha um provedor para entrar ou digite seu e-mail e senha.",
-				"signup": "Crie uma conta para começar a usar a plataforma.",
-				"forgotpw": "Enviaremos instruções para você recuperar sua senha."
-			},
-			"content": {
-				"forgotpw-btn": "Voltar para fazer login",
-				"signin-btn": "Não tem uma conta? Cadastre-se",
-				"signup-btn": "Já tem uma conta? Entrar"
-			},
-			"email-label": "Endereço de e-mail",
-			"email-placeholder": "Seu endereço de e-mail",
-			"forgot-password": "Esqueceu sua senha?",
-			"or-continue": "ou continue com",
-			"password-label": "Senha",
-			"password-placeholder": "Sua senha",
-			"cpassword-label": "Confirme a senha",
-			"terms-agreement": {
-				"1": "Ao fazer login por meio de um provedor terceirizado, você concorda com a nossa ",
-				"2": " e os "
-			}
-		}
-	},
-	"validations": {
-		"string": {
-			"min": "Deve ser mais longo",
-			"max": "Deve ser mais curto"
-		},
-		"email": {
-			"invalid": "O endereço de e-mail parece inválido"
-		},
-		"password": {
-			"min": "Deve ter pelo menos 8 caracteres",
-			"mismatch": "As senhas não conferem"
-		}
-	},
-	"exceptions": {
-		"route-not-authorized": "Você não tem permissão para acessar esta página",
-		"internal-server-error": "Erro interno do servidor",
-		"bad-request-error": "Erro de solicitação inválida",
-		"missing-required-parameter-error": "Parâmetro obrigatório faltando: {key}",
-		"auth": {
-			"passwords-not-match": "Senha inválida"
-		},
-		"users": {
-			"user-already-exists": "Usuário já existe",
-			"user-not-found": "Usuário não encontrado",
-			"password-not-set": "Entre com o seu provedor e defina uma senha nas configurações da sua conta primeiro",
-			"verifications": {
-				"invalid-token": "Token de verificação inválido",
-				"expired-token": "Token de verificação expirado",
-				"validate_email": {
-					"already-verified": "Email já foi verificado",
-					"cooldown-not-lifted": "Limitado a um email de verificação a cada 5 minutos"
-				},
-				"reset_password": {
-					"cooldown-not-lifted": "Limitado a uma redefinição de senha a cada 5 minutos"
-				}
-			},
-			"unknown": {
-				"saving-user-profile": "Algo deu errado ao salvar seu perfil"
-			}
-		},
-		"activity": {
-			"activity-not-found": "Atividade não encontrada",
-			"missing-required-parameter-error": "Parâmetro obrigatório faltando: projectId"
-		},
-		"program": {
-			"program-not-found": "Programa não encontrado"
-		},
-		"project": {
-			"project-not-found": "Projeto não encontrado"
-		},
-		"subActivity": {
-			"subActivity-not-found": "Sub Atividade não encontrada",
-			"missing-required-parameter-error": "Parâmetro obrigatório faltando: activityId"
-		}
-	},
-	"footer": {
-		"about-us": "Sobre nós",
-		"open-source": "Código aberto",
-		"public-analytics": "Estatísticas públicas",
-		"legal": "Jurídico",
-		"reserved": "© 2022-PRESENTE Os contribuidores da Extensionly. Todos os direitos reservados."
-	}
+  "terms": {
+    "cookies-policy": "Política de Cookies",
+    "dismiss": "Dispensar",
+    "search": "Pesquisar atividades",
+    "email": "E-mail",
+    "signin": "Entrar",
+    "signup": "Cadastrar",
+    "forgotpw": "Enviar instruções",
+    "privacy-policy": "Política de Privacidade",
+    "terms-and-conditions": "Termos e Condições",
+    "light": "Claro",
+    "dark": "Escuro",
+    "theme": "Tema",
+    "language": "Idioma",
+    "signout": "Sair",
+    "my-account": "Minha conta",
+    "system": "Sistema",
+    "winter": "Inverno",
+    "night": "Noite",
+    "please-wait": "Por favor, aguarde",
+    "with": "com",
+    "cookies-notice": {
+      "more-info": "Mais informações em",
+      "subtitle": "Usamos apenas cookies essenciais para oferecer nossos serviços.",
+      "title": "Declaração de Cookies"
+    },
+    "save": "Salvar",
+    "delete": "Excluir"
+  },
+  "dialogs": {
+    "auth": {
+      "title": {
+        "signin": "Entre ou crie uma conta",
+        "signup": "Crie uma conta",
+        "forgotpw": "Recupere sua senha"
+      },
+      "description": {
+        "signin": "Por favor, escolha um provedor para entrar ou digite seu e-mail e senha.",
+        "signup": "Crie uma conta para começar a usar a plataforma.",
+        "forgotpw": "Enviaremos instruções para você recuperar sua senha."
+      },
+      "content": {
+        "forgotpw-btn": "Voltar para fazer login",
+        "signin-btn": "Não tem uma conta? Cadastre-se",
+        "signup-btn": "Já tem uma conta? Entrar"
+      },
+      "email-label": "Endereço de e-mail",
+      "email-placeholder": "Seu endereço de e-mail",
+      "forgot-password": "Esqueceu sua senha?",
+      "or-continue": "ou continue com",
+      "password-label": "Senha",
+      "password-placeholder": "Sua senha",
+      "cpassword-label": "Confirme a senha",
+      "terms-agreement": {
+        "1": "Ao fazer login por meio de um provedor terceirizado, você concorda com a nossa ",
+        "2": " e os "
+      }
+    }
+  },
+  "footer": {
+    "about-us": "Sobre nós",
+    "open-source": "Código aberto",
+    "public-analytics": "Estatísticas públicas",
+    "legal": "Jurídico",
+    "reserved": "© 2022-PRESENTE Os contribuidores da Extensionly. Todos os direitos reservados."
+  }
 }
