--- a/src/lib/i18n/locales/en/routes/account.json
+++ b/src/lib/i18n/locales/en/routes/account.json
@@ -52,6 +52,18 @@
         "label": "The URL for your new profile picture"
       },
       "info": "To see the changes in your current session, re-login in the platform."
-    }
+    },
+    "password": {
+      "success": "Password updated successfully!",
+      "pw": {
+        "label": "Your new password"
+      },
+      "cpw": {
+        "label": "Confirm your new password"
+      },
+      "title": "Edit your account password",
+      "info": "You do not have a password set. Setting a password will allow you to login without a third party provider."
+    },
+    "danger-zone": "Danger Zone"
   }
 }
