--- a/src/lib/i18n/locales/pt-BR/routes/account.json
+++ b/src/lib/i18n/locales/pt-BR/routes/account.json
@@ -51,6 +51,18 @@
         "label": "A URL da sua nova foto de perfil"
       },
       "info": "Para ver as alterações em sua sessão atual, faça login novamente."
-    }
+    },
+    "password": {
+      "success": "Senha atualizada com sucesso!",
+      "pw": {
+        "label": "Sua nova senha"
+      },
+      "cpw": {
+        "label": "Confirme sua nova senha"
+      },
+      "title": "Edite a senha da sua conta",
+      "info": "Você não tem uma senha definida. Definir uma senha permitirá que você faça login sem um provedor terceiro."
+    },
+    "danger-zone": "Zona de Perigo"
   }
 }
