Signup and phone number (#9)
* feat: add phone number input

* feat: add phone number input

* fix: telephone input

* feat: add extra padding to dialogs

* refactor: phone component

* fix: phone country menu opening

* fix: trpc client

* feat: signup working

* feat: update user, redirect after signup

* feat: update password

* feat: invalidate password setting

* fix: update translations

--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -26,7 +26,8 @@
       "title": "Cookies Notice"
     },
     "save": "Save",
-    "delete": "Delete"
+    "delete": "Delete",
+    "search-word": "Search"
   },
   "dialogs": {
     "auth": {
@@ -55,7 +56,12 @@
       "terms-agreement": {
         "1": "By signing in through a third party provider, you agree to our ",
         "2": " and the "
-      }
+      },
+      "name-label": "Name",
+      "name-placeholder": "Your full name",
+      "phone-placeholder": "Your phone number",
+      "phone-label": "Phone number",
+      "signup-success": "Account created successfully!"
     }
   },
   "footer": {
