--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -26,7 +26,8 @@
       "title": "Declaração de Cookies"
     },
     "save": "Salvar",
-    "delete": "Excluir"
+    "delete": "Excluir",
+    "search-word": "Procurar"
   },
   "dialogs": {
     "auth": {
@@ -55,7 +56,12 @@
       "terms-agreement": {
         "1": "Ao fazer login por meio de um provedor terceirizado, você concorda com a nossa ",
         "2": " e os "
-      }
+      },
+      "name-label": "Nome",
+      "name-placeholder": "Seu nome completo",
+      "phone-placeholder": "Seu número de telefone",
+      "phone-label": "Número de telefone",
+      "signup-success": "Conta criada com sucesso!"
     }
   },
   "footer": {
