--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -62,7 +62,7 @@
       "name-placeholder": "Seu nome completo",
       "phone-placeholder": "Seu número de telefone",
       "phone-label": "Número de telefone",
-      "signup-success": "Conta criada com sucesso!"
+      "signup-success": "Verifique a caixa de entrada do seu e-mail para completar o cadastro!"
     }
   },
   "footer": {
