--- a/src/lib/i18n/locales/pt-BR/emails.json
+++ b/src/lib/i18n/locales/pt-BR/emails.json
@@ -5,13 +5,13 @@
 			"team": "Equipe da Extensionly",
 			"address": "Av. Tiarajú, Alegrete, Rio Grande do Sul, Brasil"
 		},
-		"type": {
-			"validate_email": {
+		"verify_type": {
+			"email": {
 				"subject": "📧 Valide seu e-mail",
 				"title": "obrigado por se inscrever na Extensionly! Estamos felizes por tê-lo como um dos primeiros usuários.",
 				"subtitle": "Valide seu endereço de e-mail clicando no link a seguir:"
 			},
-			"reset_password": {
+			"password": {
 				"subject": "🔒 Redefina sua senha",
 				"title": "uma requisição de redefinição de senha foi feita em seu nome.",
 				"subtitle": "Se você não reconhece esta atividade, ignore este e-mail. Caso contrário, redefina sua senha clicando no link a seguir:"
