--- a/src/lib/i18n/locales/en/routes/verify/password.json
+++ b/src/lib/i18n/locales/en/routes/verify/password.json
@@ -1,6 +1,6 @@
 {
   "v-password":{
-    "sent-email":"Reset password email sent successfully!",
+    "sent-email":"Instructions to reset your password were sent successfully to your inbox!",
     "invalid-token":"Invalid verification token",
     "reset-pw-title": "Create a new password"
   }
