feat: ✨ add checkbox component and accept terms and conditions input (#30)
* feat: ✨ add checkbox component and accept terms and conditions input

* test: ✅ fix tests

* fix: 🐛 save auth dialog state between pages

* fix: 🩹 remove id from checkbox

* fix: 🐛 auth dialog responsiveness

* fix: 🩹 remove id instead of name

--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -62,7 +62,8 @@
       "name-placeholder": "Your full name",
       "phone-placeholder": "Your phone number",
       "phone-label": "Phone number",
-      "signup-success": "Check your e-mail inbox to complete the registration!"
+      "signup-success": "Check your e-mail inbox to complete the registration!",
+      "accept-terms-label": "I have read and agreed to the"
     }
   },
   "footer": {
