--- a/src/lib/i18n/locales/en/routes/verify/email.json
+++ b/src/lib/i18n/locales/en/routes/verify/email.json
@@ -1,5 +1,5 @@
 {
   "v-email":{
-    "email-validated":"Email successfully validated, please proceed with your login!"
+    "email-validated":"Email successfully validated!"
   }
 }
