--- a/src/lib/i18n/locales/en/exceptions.json
+++ b/src/lib/i18n/locales/en/exceptions.json
@@ -1,49 +1,58 @@
 {
-	"exceptions": {
-		"generic": "An error occurred, please try again later",
-		"internal-server-error": "Internal server error",
-		"bad-request-error": "Bad request error",
-		"auth": {
-			"passwords-not-match": "Invalid password"
-		},
-		"users": {
-			"email-already-in-use": "This email or phone number is already in use",
-			"user-not-found": "User not found",
-			"password-not-set": "Log in with your provider and set a password in your account settings first",
-			"password": {
-				"incorrect-current": "The current password you entered is incorrect",
-				"no-password": "Create a password for you account first"
-			},
-			"email-not-found":"Email not found",
-			"error-sending-email":"An unknown error occurred when sending the email, please try again later",
-			"verifications": {
-				"invalid-token": "Invalid verification token",
-				"expired-token": "Verification token expired",
-				"validate_email": {
-					"already-verified": "Email is already verified",
-					"cooldown-not-lifted": "Limited to one verification email every 5 minutes"
-				},
-				"reset_password": {
-					"cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
-				}
-			},
-			"unknown": {
-				"saving-user-profile": "An error occurred while saving your profile"
-			}
-		},
-		"activity": {
-			"activity-not-found": "Activity not found",
-			"missing-required-parameter-error": "Missing required query param: projectId"
-		},
-		"program": {
-			"program-not-found": "Program not found"
-		},
-		"project": {
-			"project-not-found": "Project not found"
-		},
-		"subActivity": {
-			"subActivity-not-found": "Sub Activity not found",
-			"missing-required-parameter-error": "Missing required query param: activityId"
-		}
-	}
+  "exceptions": {
+    "status": {
+      "404": {
+        "title": "The page you are looking for does not exist.",
+        "message": "You may have mistyped the address or the page may have moved."
+      },
+      "500": {
+        "title": "An unknown error occurred.",
+        "message": "Please try again later."
+      }
+    },
+    "generic": "An error occurred, please try again later",
+    "auth": {
+      "passwords-not-match": "Invalid password"
+    },
+    "users": {
+      "email-already-in-use": "This email or phone number is already in use",
+      "user-not-found": "User not found",
+      "password-not-set": "Log in with your provider and set a password in your account settings first",
+      "password": {
+        "incorrect-current": "The current password you entered is incorrect",
+        "no-password": "Create a password for you account first"
+      },
+      "email-not-found": "Email not found",
+      "error-sending-email": "An unknown error occurred when sending the email, please try again later",
+      "verifications": {
+        "invalid-token": "Invalid verification token",
+        "expired-token": "Verification token expired",
+        "validate_email": {
+          "already-verified": "Email is already verified",
+          "cooldown-not-lifted": "Limited to one verification email every 5 minutes"
+        },
+        "reset_password": {
+          "cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
+        }
+      },
+      "unknown": {
+        "saving-user-profile": "An error occurred while saving your profile"
+      }
+    },
+    "activity": {
+      "activity-not-found": "Activity not found",
+      "missing-required-parameter-error": "Missing required query param: projectId"
+    },
+    "program": {
+      "program-not-found": "Program not found"
+    },
+    "project": {
+      "project-not-found": "Project not found"
+    },
+    "subActivity": {
+      "subActivity-not-found": "Sub Activity not found",
+      "missing-required-parameter-error": "Missing required query param: activityId"
+    },
+    "go-back": "Go back to the home page"
+  }
 }
