feat: ✨  limit the max amount of activities fetch on list page (#37)
* feat: ✨ add more activities to seed

* feat: ✨ add take and skip to get activities

* chore: 🔧 update packages

* feat: ✨ add svg to empty items in activities

* refactor: ♻️ update Button, add background svg to all pages

* fix: 🩹 fix paddings and about section, minor improvements

* fix: 🐛 gradient path

* feat: ✨ infinite loading

* feat: ✨ add more fields to search

--- a/src/lib/i18n/locales/en/routes/activities/default.json
+++ b/src/lib/i18n/locales/en/routes/activities/default.json
@@ -1,43 +1,43 @@
 {
   "a-default": {
-      "activity-finished": "Activity is finished.",
-      "and-ends": "and ends",
-      "began": "Began",
-      "begins": "Begins",
-      "buttons": {
-        "message-professor": "Message organizer",
-        "see-details": "See details"
-      },
-      "details": {
-        "dates": {
-          "begin": "Begins on",
-          "end": "Ends on",
-          "enrollments": {
-            "close": "Closes on",
-            "open": "Opens on",
-            "title": "Enrollments"
-          },
-          "title": "Important Dates"
+    "activity-finished": "Activity is finished.",
+    "and-ends": "and ends",
+    "began": "Began",
+    "begins": "Begins",
+    "buttons": {
+      "message-professor": "Message organizer",
+      "see-details": "See details"
+    },
+    "details": {
+      "dates": {
+        "begin": "Begins on",
+        "end": "Ends on",
+        "enrollments": {
+          "close": "Closes on",
+          "open": "Opens on",
+          "title": "Enrollments"
         },
-        "enroll-btn": "Enroll in this activity",
-        "instructor": "Instructor",
-        "location": {
-          "maps-btn": "See in Google Maps",
-          "title": "Location Address"
-        },
-        "project": {
-          "related-activities": "See related activities",
-          "title": "Project"
-        }
+        "title": "Important Dates"
       },
-      "enrollments": {
-        "are": "Enrollments are",
-        "closed": "closed",
-        "open": "open",
-        "until": "until",
-        "will-open": "Enrollments will open"
+      "enroll-btn": "Enroll in this activity",
+      "instructor": "Instructor",
+      "location": {
+        "maps-btn": "See in Google Maps",
+        "title": "Location Address"
       },
-      "no-activities-found": "No activities found. Please update the filter.",
-      "title": "Browse extension actions"
-    }
+      "project": {
+        "related-activities": "See related activities",
+        "title": "Project"
+      }
+    },
+    "enrollments": {
+      "are": "Enrollments are",
+      "closed": "closed",
+      "open": "open",
+      "until": "until",
+      "will-open": "Enrollments will open"
+    },
+    "no-activities-found": "We couldn't find any activities that match this search criteria. You can try updating the filter.",
+    "title": "Browse extension actions"
+  }
 }
