fix: 🐛 re-check the signin/signup flow (#40)
* fix: 🐛 not sending emails or creating the user

* refactor: ♻️ rename validateVerification to checkVerification

* feat: ✨ check verification by email, preventing signin of unverified users

* feat: ✨ re send verification token if token is expired

* fix: 🐛 update seed

* test: ✅ fix tests

* test: ✅ add expired email test

* refactor: ♻️ seed file

--- a/src/lib/i18n/locales/en/exceptions.json
+++ b/src/lib/i18n/locales/en/exceptions.json
@@ -25,14 +25,17 @@
       "email-not-found": "Email not found",
       "error-sending-email": "An unknown error occurred when sending the email, please try again later",
       "verifications": {
-        "invalid-token": "Invalid verification token",
-        "expired-token": "Verification token expired",
+        "invalid-token": "The token you are trying to verify is invalid",
+        "expired-token": "This verification token is expired",
         "validate_email": {
           "already-verified": "Email is already verified",
-          "cooldown-not-lifted": "Limited to one verification email every 5 minutes"
+          "cooldown-not-lifted": "Limited to one verification email every 5 minutes",
+          "no-verifications": "This user has no validate email verifications associated with it",
+          "not-verified": "This account has not been verified yet, please check your email"
         },
         "reset_password": {
-          "cooldown-not-lifted": "Limited to one password reset request every 5 minutes"
+          "cooldown-not-lifted": "Limited to one password reset request every 5 minutes",
+          "no-verifications": "This user has no password reset verifications associated with it"
         }
       },
       "unknown": {
