--- a/src/lib/i18n/locales/pt-BR/zod.json
+++ b/src/lib/i18n/locales/pt-BR/zod.json
@@ -28,7 +28,13 @@
     "date": {
       "invalid": "A data parece inválida",
       "start-after-end": "A data de início deve ser anterior à data de término",
-      "past": "A data e hora estão no passado"
+      "past": "A data e hora estão no passado",
+      "enrollment-start-after-end": "As inscrições devem começar antes do término da atividade",
+      "enrollment-start-before-start": "As inscrições devem começar depois do início da atividade",
+      "enrollment-end-after-end": "As inscrições devem terminar antes do término da atividade",
+      "enrollment-end-before-start": "As inscrições devem terminar depois do início da atividade",
+      "enrollment-start-before-now": "As inscrições devem começar no futuro",
+      "enrollment-start-after-enrollment-end": "As inscrições devem começar antes do término das inscrições"
     }
   }
 }
